[project]
name = "ipclick"
version = "0.1.1"
description = "IPClick Tool"
authors = [
    { name = "元气码农少女酱", email = "1276162429@qq.com" }
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.14.0,<0.15.0",
    "grpcio>=1.76.0,<2.0.0",
    "protobuf>=6.33.2,<7.0.0",
    "click>=8.3.1,<9.0.0",
    "httpx>=0.28.1,<0.29.0",
    "fake-useragent>=2.2.0,<3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yuanqimanong/IPClick"
"Repository" = "https://github.com/yuanqimanong/IPClick"
"Bug Tracker" = "https://github.com/yuanqimanong/IPClick/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "grpcio-tools (>=1.76.0,<2.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]

[project.scripts]
ipclick = "ipclick.__main__:main"

[tool.pyright]
include = ["src"]
exclude = ["**/test_*"]